2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/host/src/matmul_host.c (int main): Return
	with non-zero exit status on detected performance regressions.

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c (int main):
	Return with non-zero exit code on detected errors.
	(int SRAM_speed): Report performance regressions.
	(int EPI_speed): Return error if Epiphany test did not run to
	completion

2015-01-25  Ola Jeppsson  <ola@adapteva.com>

	* softcache/basic_math/Makefile: Fix cross compilation paths.
	* softcache/math_example/Makefile: Likewise.

2015-01-24  Ola Jeppsson  <ola@adapteva.com>

	* dma/dma_slave/src/dma_slave_test.c (int main): Go back to
	wait time before previous commit.

2015-01-24  Ola Jeppsson  <ola@adapteva.com>

	* dma/dma_2d/src/dma_2d_test.c (int main): Fix missing err
	check.
	* dma/dma_slave/src/dma_slave_test.c: Slightly increase wait.

2015-01-24  Ola Jeppsson  <ola@adapteva.com>

	* dma/dma_2d/src/dma_2d_test.c (int main): Indicate error with
	return code.
	* dma/dma_chain/src/dma_chain_test.c: Likewise
	* dma/dma_interrupt/src/dma_int_test.c: Likewise
	* dma/dma_message_read/src/dma_message_a.c: Likewise
	* dma/dma_message_write/src/dma_message_test.c: Likewise
	* dma/dma_slave/src/dma_slave_test.c: Likewise

2015-01-16  Ola Jeppsson  <ola@adapteva.com>

	* labs/mem_protect/src/mpf_isr.s: Remove.
	* labs/mem_protect/src/emain.c (void mpf_isr): Replace above
	assembler page fault handler with C version.
	(int main): Simplify. Do not test stack page.
	* labs/mem_protect/src/main.c: Simplify.
	* labs/mem_protect/build.sh: Don't link with removed assembly
	mpf isr. Use linker script that will place stack in local core
	SRAM.

2015-01-16  Ola Jeppsson  <ola@adapteva.com>

	* labs/hardware_barrier/src/main.c (int main): Exit with
	failure code on detected failure.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* README.md: Add descriptions for missing directories.
